fixed the overflow of case images

--- a/web-app/less/app-cases.less
+++ b/web-app/less/app-cases.less
@@ -126,7 +126,10 @@
   .pics {
     .absolute-top-left(10px, 35px);
     img {
+      display: inline-block;
       margin: 0 6px 0 0;
+      overflow: hidden;
+      .square(50px);
     }
     .update-count {
       .absolute-bottom-right(-5px, 5px);
